# ecspp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: ecspp.h  global.h
include/components/: add_only_to.h  add_to_every_object.h  component.h  component_specifier.h
include/helpers/: helpers.cpp  helpers.h
include/object/: object.cpp  object.h  object_base.h  object_handle.h  object_properties.cpp  object_properties.h  object_property_register.cpp  object_property_register.h  registry.cpp  registry.h  tagged_object.h
test/: CMakeLists.txt  test.cpp
